--- a/property/src/app/dashpostprop/dashpostprop.component.html
+++ b/property/src/app/dashpostprop/dashpostprop.component.html
@@ -12,7 +12,7 @@
     <th>IMAGES</th>
   </thead>
   <tbody>
-    <tr *ngFor="let user of alluserData">
+    <tr *ngFor="let user of allUserData">
       <td>{{user.name}}</td>
       <td>{{user.email}}</td>
       <td>{{user.phone}}</td>
