--- a/property/src/app/dashqueries/dashqueries.component.html
+++ b/property/src/app/dashqueries/dashqueries.component.html
@@ -8,7 +8,7 @@
       <th>MESSAGE</th>
      </thead>
     <tbody>
-      <tr *ngFor="let user of alluserData">
+      <tr *ngFor="let user of allUserData">
         <td>{{user.name}}</td>
         <td>{{user.email}}</td>
         <td>{{user.message}}</td>
