--- a/property/src/app/contact/contact.component.html
+++ b/property/src/app/contact/contact.component.html
@@ -1,22 +1,22 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <form [formGroup]="contactform" (ngSubmit)="saving(this.contactform.value)">
+        <form [formGroup]="contactForm" (ngSubmit)="saving(this.contactForm.value)">
             <div class="form-group">
                 <label for="name" class='name'></label>
                 <input type="text" placeholder="Enter your name" formControlName="name">
-                <span class="text-danger" *ngIf="contactform.controls.name.errors && contactform.controls.name.touched"><br>Field cant be empty</span>
+                <span class="text-danger" *ngIf="contactForm.controls.name.errors && contactForm.controls.name.touched"><br>Field cant be empty</span>
               </div>
           <div class="form-group">
             <label for="email" class='mail'></label>
             <input type="email" placeholder="Email Address" formControlName="email">
-            <span class="text-danger" *ngIf="contactform.controls.email.errors && contactform.controls.email.touched"><br>Invalid Email Address</span>
+            <span class="text-danger" *ngIf="contactForm.controls.email.errors && contactForm.controls.email.touched"><br>Invalid Email Address</span>
           </div>
 
           <div class="form-group">
             <label for="message" class='message'></label>
             <input type="textarea" placeholder="Ask Your Queries" formControlName="message">
-            <span class="text-danger" *ngIf="contactform.controls.message.errors && contactform.controls.message.touched"><br>Field cant be empty</span>
+            <span class="text-danger" *ngIf="contactForm.controls.message.errors && contactForm.controls.message.touched"><br>Field cant be empty</span>
           </div>
 
           
