--- a/property/src/app/postad/postad.component.html
+++ b/property/src/app/postad/postad.component.html
@@ -2,20 +2,20 @@
 <div class="container-fluid">
     <div class="row">
       <div class="col-12">
-        <form [formGroup]="postform" (ngSubmit)="saving(this.postform.value)">
+        <form [formGroup]="postForm" (ngSubmit)="saving(this.postForm.value)">
             <div class="form-group">
                 <label for="name" class='name'></label>
           <em class="fa fa-user"></em>
 
                 <input type="text" placeholder="Enter your name" formControlName="name">
-                <span class="text-danger" *ngIf="postform.controls.name.errors && postform.controls.name.touched"><br>Field cant be empty</span>
+                <span class="text-danger" *ngIf="postForm.controls.name.errors && postForm.controls.name.touched"><br>Field cant be empty</span>
               </div>
  <div class="form-group">
             <label for="email" class='mail'></label>
           <em class="fa fa-envelope"></em>
 
             <input type="email" placeholder="Email Address" formControlName="email">
-            <span class="text-danger" *ngIf="postform.controls.email.errors && postform.controls.email.touched"><br>Invalid Email Address</span>
+            <span class="text-danger" *ngIf="postForm.controls.email.errors && postForm.controls.email.touched"><br>Invalid Email Address</span>
           </div>
 
           <div class="form-group">
@@ -23,7 +23,7 @@
           <em class="fa fa-phone"></em>
 
             <input type="number" placeholder="Contact number" formControlName="phone">
-            <span class="text-danger" *ngIf="postform.controls.phone.errors && postform.controls.phone.touched"><br>Field cant be empty</span>
+            <span class="text-danger" *ngIf="postForm.controls.phone.errors && postForm.controls.phone.touched"><br>Field cant be empty</span>
           </div>
 
           
@@ -32,14 +32,14 @@
           <em class="fa fa-map-marker"></em>
 
             <input type="text" placeholder="Address of the property" formControlName="address">
-            <span class="text-danger" *ngIf="postform.controls.address.errors && postform.controls.address.touched"><br>Enter your Current Address</span>
+            <span class="text-danger" *ngIf="postForm.controls.address.errors && postForm.controls.address.touched"><br>Enter your Current Address</span>
           </div>
         
           <div class="form-group">
             <label for="landmark" class='landmark'></label>
             <em class="fa fa-location-arrow"></em>
             <input type="text" placeholder="Nearest Landmark" formControlName="landmark">
-            <span class="text-danger" *ngIf="postform.controls.landmark.errors && postform.controls.landmark.touched"><br>Specify your Problem</span>
+            <span class="text-danger" *ngIf="postForm.controls.landmark.errors && postForm.controls.landmark.touched"><br>Specify your Problem</span>
           </div>
         
          
@@ -54,21 +54,21 @@
             <em class="fa fa-building"></em>
 
             <input type="text" placeholder="Type of the property" formControlName="typeofprop">
-            <span class="text-danger" *ngIf="postform.controls.typeofprop.errors && postform.controls.typeofprop.touched"><br>Enter your Current Address</span>
+            <span class="text-danger" *ngIf="postForm.controls.typeofprop.errors && postForm.controls.typeofprop.touched"><br>Enter your Current Address</span>
           </div>
           <div class="form-group-f1">
             <label for="rent" class='rent'></label>
             <em class="fa fa-money"></em>
 
             <input type="text" placeholder="Rent/month" formControlName="rent">
-            <span class="text-danger" *ngIf="postform.controls.rent.errors && postform.controls.rent.touched"><br>Enter your annual income</span>
+            <span class="text-danger" *ngIf="postForm.controls.rent.errors && postForm.controls.rent.touched"><br>Enter your annual income</span>
           </div>
           <div class="form-group-f1">
             <label for="description" class='description'></label>
             <em class="fa fa-pen"></em>
 
             <input type="text" placeholder="Description about your property" formControlName="description">
-            <span class="text-danger" *ngIf="postform.controls.description.errors && postform.controls.description.touched"><br>Enter your annual income</span>
+            <span class="text-danger" *ngIf="postForm.controls.description.errors && postForm.controls.description.touched"><br>Enter your annual income</span>
           </div>
           <div class="form-group-f1">
             <label for="fileUpload"></label>
