--- a/property/src/app/commercial6/commercial6.component.html
+++ b/property/src/app/commercial6/commercial6.component.html
@@ -1,1 +1,20 @@
-<p>commercial6 works!</p>
+<div class="container">
+    <div class="contact-box">
+        <div class="left"></div>
+        <div class="right">
+            <h2>CONTACT</h2>
+            <p>MANI</p><br>
+            <p>
+
+
+                <em class="fas fa-envelope"></em>maniraj@gmail.com</p><br>
+                <p><em class="fas fa-phone-alt"></em>9566575359</p><br>
+                <p>A Decent 1BHK house with good interior designs and modular kitchen , 2 attached restrooms , beach view balcony and there are both 2 wheeler and 4wheeler parking facilities</p><br>
+            
+            <a href="apply" class="apply">APPLY</a>
+
+        </div>
+    </div>
+</div>
+
+
