--- a/property/src/app/dashboard/dashboard.component.html
+++ b/property/src/app/dashboard/dashboard.component.html
@@ -23,15 +23,14 @@
     <li>
      
     </li>
-    <li class="logout">
-     
-    </li>
+   
    </ul>
   </div>
 
     <div class="container">
-    <h2>DASHBOARD </h2>
+<a href="logout" class="logout">LOGOUT</a>
 
+    <h2>DASHBOARD </h2>
         <div class="card hero">
           <div class="row row__one">
             <div class="col col__one hero__img">
