--- a/property/src/app/getcontactlogin/getcontactlogin.component.html
+++ b/property/src/app/getcontactlogin/getcontactlogin.component.html
@@ -38,15 +38,10 @@
         </div>
   
         <div class="login-btn">
-          <p class="account">
-            Don't have an account? <span><a href="signup">SIGNUP</a></span>
-          </p>
-          <button id="submitButton" type="submit" class="btn">LOGIN</button>
           
+          <!-- <button id="submitButton" type="submit" class="btn">LOGIN</button> -->
+          <a href="house1">APPLY</a>
         </div>
       </form>
-      <div class="image">
-        <img class="img" src="../../assets/loginpage.jpeg" alt="img" />
-       </div>
     </div>
   </section>
