--- a/property/src/app/house1/house1.component.html
+++ b/property/src/app/house1/house1.component.html
@@ -12,7 +12,7 @@
                     <p><em class="fas fa-phone-alt"></em>9566577069</p><br>
                     <p>A Decent 1BHK house with good interior designs and modular kitchen , 2 attached restrooms , beach view balcony and there are both 2 wheeler and 4wheeler parking facilities</p><br>
 				
-				<a href="apply" class="apply">APPLY</a>
+				<!-- <a href="apply" class="apply">APPLY</a> -->
 			</div>
 		</div>
 	</div>
