--- a/property/src/app/postad/postad.component.html
+++ b/property/src/app/postad/postad.component.html
@@ -58,7 +58,7 @@
           </div>
           <div class="form-group-f1">
             <label for="rent" class='rent'></label>
-            <em class="fa fa-money"></em>
+            <em class="fa fa-credit-card"></em>
 
             <input type="text" placeholder="Rent/month" formControlName="rent">
             <span class="text-danger" *ngIf="postForm.controls.rent.errors && postForm.controls.rent.touched"><br>Enter your annual income</span>
@@ -72,7 +72,7 @@
           </div>
           <div class="form-group-f1">
             <label for="fileUpload"></label>
-            <em class="fa fa-cloud-upload"></em>
+            <em class="fa fa-upload"></em>
 
             <input type="text" id="fileUpload"  placeholder="Add image" formControlName="upload">
           
