--- a/property/src/app/register/register.component.html
+++ b/property/src/app/register/register.component.html
@@ -1,6 +1,10 @@
 <section>
+     <div class="register">
+     <h3>REGISTER TO <span>GET STARTED</span></h3>
+
      <div class="sign">
       <div class="container">
+
        <form [formGroup]="loginForm" (ngSubmit)="login(this.loginForm.value)">
 
           <div class="form-group">
@@ -93,7 +97,7 @@
     
       <div class="image">
        <img class="img" src="../../assets/cover.jpg" alt="img" />
-       
+      </div>
       </div>
      </div>
     </section>
