--- a/property/src/app/services/services.component.html
+++ b/property/src/app/services/services.component.html
@@ -10,7 +10,7 @@
             <p class="card-text">
             {{item.description}}
             </p>
-            <a href="login" class="house1">GET CONTACT</a>
+            <a href="house1" class="house1">GET CONTACT</a>
           </div>
         </div>
       </div>
