--- a/property/src/app/footer/footer.component.css
+++ b/property/src/app/footer/footer.component.css
@@ -19,7 +19,7 @@ footer {
     text-align: left;
     font:16px;
     padding: 50px 50px 60px 50px;
-    margin-top: 100px;
+    /* margin-top: 100px; */
   }
   
   .footer-distributed .footer-left, .footer-distributed .footer-center, .footer-distributed .footer-right {
