--- a/property/src/app/land/land.component.html
+++ b/property/src/app/land/land.component.html
@@ -1,5 +1,7 @@
 
     <div class="grid">
+  <ng-container *ngFor="let item of propertyList | filter:searchKey:'address'">
+
       <div class="grid-item">
         <div class="card">
           <img class="card-img" src="../../assets/land1.jpg" alt="land" />
