--- a/property/src/app/login/login.component.css
+++ b/property/src/app/login/login.component.css
@@ -4,11 +4,7 @@ section {
      margin-top: -20px;
      padding: 90px;
     }
-    .container {
-     /* background-color: #ddd; */
-     border-radius: 10px;
-     width: 500px;
-    }
+    
     
     .text {
      color: goldenrod;
@@ -19,7 +15,7 @@ section {
     }
     
     .form-group {
-     width: 60%;
+     width: 100%;
      overflow: hidden;
      font-size: 20px;
      padding: 28px 0;
@@ -62,7 +58,7 @@ section {
     .account {
      font-size: 18px;
      text-align: center;
-     padding-right: 35%;
+     padding-right: 4%;
     }
     .btn {
    
@@ -86,5 +82,18 @@ section {
       transform: scale(1.08);
     }
     
-    
+    .img {
+      width: 600px;
+      height: 300px;
+      opacity: 1;
+      display: flex;
+      margin-left: 150px;
+    }
+    .container{
+      display: flex;
+    padding-left: 100px;
+    border-radius: 10px;
+    width: 500px;
+
+    } 
     
