--- a/property/src/app/register/register.component.css
+++ b/property/src/app/register/register.component.css
@@ -3,7 +3,9 @@ section {
   }
   .sign {
     
-    padding-left: 100px;
+    padding-left: 90px;
+    display: flex;
+
   } 
   .centered {
     position: absolute;
@@ -44,8 +46,8 @@ section {
     font-size: 20px;
     padding: 20px 0;
     border-bottom: 1px solid goldenrod;
-    margin-left: 50px;
-    width: 40%;
+    margin-left: 20px;
+    width: 70%;
   }
   
   input {
@@ -87,20 +89,38 @@ section {
   .signup {
     text-align: center;
     padding-top: 20px;
-    padding-right: 75%;
+    padding-right: 65%;
   }
   
   .form {
     color: goldenrod;
+    width: 60%;
+    margin-left: 200px;
   }
   
   .img {
-    width: 400px;
+    width: 600px;
     height: 400px;
     opacity: 1;
     display: flex;
+    margin-right: 100px;
   }
   a {
     color: goldenrod;
     text-decoration: none;
   }
+
+ .form-group 
+ {
+    display: inline-block;
+  }
+  h3{
+    font-size: 40px;
+    padding-left: 50%;
+  }
+.register{
+  margin-top: -70px;
+}
+span{
+  color: goldenrod;
+}
