--- a/property/src/app/dashboard/dashboard.component.html
+++ b/property/src/app/dashboard/dashboard.component.html
@@ -18,6 +18,8 @@
     <a href="queries">QUERIES</a>
     </li>
     <li>
+    <a href="logout">LOGOUT</a>
+
      
     </li>
     <li>
@@ -28,9 +30,9 @@
   </div>
 
     <div class="container">
-<a href="logout" class="logout">LOGOUT</a>
+<!-- <a href="logout" class="logout">LOGOUT</a> -->
 
-    <h2>DASHBOARD </h2>
+    <h2>DASH<span>BOARD</span> </h2>
         <div class="card hero">
           <div class="row row__one">
             <div class="col col__one hero__img">
