--- a/property/src/app/buytypeofprop/buytypeofprop.component.css
+++ b/property/src/app/buytypeofprop/buytypeofprop.component.css
@@ -13,6 +13,9 @@
      font-size: 30px;
      margin-top: 20px;
    }
+   span{
+     color: goldenrod;
+   }
    .card{
         width: 20%;
         display: inline-block;
