--- a/property/src/app/footer/footer.component.css
+++ b/property/src/app/footer/footer.component.css
@@ -69,19 +69,19 @@ footer {
   
   
   .footer-distributed .footer-center {
-    width: 35%;
+    width: 40%;
   }
   
   .footer-distributed .footer-center em {
     background-color: #222;
     color: #ffffff;
     font-size: 25px;
-    width: 38px;
+    width: 98px;
     height: 38px;
     border-radius: 50%;
     text-align: center;
     line-height: 42px;
-    margin: 10px 15px;
+    margin: 10px 10px;
     vertical-align: middle;
   }
   
@@ -95,12 +95,14 @@ footer {
     color: #ffffff;
     vertical-align: middle;
     margin: 0;
+    font-size: 20px;
+    margin-left: 90px;
   }
   
   .footer-distributed .footer-center p span {
     display: block;
     font-weight: normal;
-    font-size: 14px;
+    font-size: 20px;
     line-height: 2;
   }
   
@@ -118,9 +120,11 @@ footer {
   .footer-distributed .footer-company-about {
     line-height: 20px;
     color: #92999f;
-    font-size: 13px;
+    font-size: 16px;
     font-weight: normal;
     margin: 0;
+    margin-left: 50px;
+
   }
   
   .footer-distributed .footer-company-about span {
@@ -133,6 +137,8 @@ footer {
   
   .footer-distributed .footer-icons {
     margin-top: 25px;
+    margin-left: 50px;
+
   }
   
   .footer-distributed .footer-icons a {
@@ -140,18 +146,18 @@ footer {
     width: 35px;
     height: 35px;
     cursor: pointer;
-    background-color: #33383b;
+    background-color: goldenrod;
     border-radius: 2px;
     font-size: 20px;
     color: #ffffff;
     text-align: center;
     line-height: 35px;
-    margin-right: 3px;
+    margin-right: 10px;
     margin-bottom: 5px;
   }
   
   .footer-distributed .footer-icons a:hover {
-    background-color:goldenrod;
+    background-color:#222;
   }
   
   .footer-links a:hover {
