--- a/property/src/app/footer/footer.component.html
+++ b/property/src/app/footer/footer.component.html
@@ -1,3 +1,4 @@
+<!-- <p>footer works!</p> -->
 
 <footer class="footer-distributed">
 
@@ -41,11 +42,11 @@
             <strong>GET PROP</strong> <br> serving you is what we love to perform.
         </p>
         <div class="footer-icons">
-            <a href="#"><em class="fa fa-facebook"></em></a>
-            <a href="#"><em class="fa fa-instagram"></em></a>
-            <a href="#"><em class="fa fa-linkedin"></em></a>
-            <a href="#"><em class="fa fa-twitter"></em></a>
-            <a href="#"><em class="fa fa-youtube"></em></a>
+            <a href="#"><em class="fab fa-facebook"></em></a>
+            <a href="#"><em class="fab fa-twitter"></em></a>
+            <a href="#"><em class="fab fa-instagram"></em></a>
+            <a href="#"><em class="fab fa-linkedin-in"></em></a>
+            <a href="#"><em class="fab fa-whatsapp"></em></a>
         </div>
     </div>
   </footer>
