--- a/property/src/app/login/login.component.html
+++ b/property/src/app/login/login.component.html
@@ -1,5 +1,8 @@
 <section>
+  <h3>REGISTER TO <span>GET STARTED</span></h3>
+
     <div class="container">
+
       <form [formGroup]="loginForm" (ngSubmit)="login(this.loginForm.value)">
         <div class="form-group">
           <em class="fa fa-envelope"></em>
@@ -14,7 +17,7 @@
             *ngIf="
               loginForm.controls.email.errors && loginForm.controls.email.touched
             "
-            ><br />Invalid Email Address</span
+            ><br />*invalid Email Address</span
           >
         </div>
   
@@ -33,7 +36,7 @@
               loginForm.controls.password.errors &&
               loginForm.controls.password.touched
             "
-            ><br />Invalid Password</span
+            ><br />*invalid Password</span
           >
         </div>
   
