--- a/property/src/app/register/register.component.css
+++ b/property/src/app/register/register.component.css
@@ -115,12 +115,15 @@ section {
     display: inline-block;
   }
   h3{
-    font-size: 40px;
-    padding-left: 50%;
+    font-size: 35px;
+    padding-left: 35%;
   }
 .register{
   margin-top: -70px;
 }
 span{
   color: goldenrod;
+}
+.text-danger{
+  color: red;
 }
