--- a/property/src/app/buytypeofprop/buytypeofprop.component.html
+++ b/property/src/app/buytypeofprop/buytypeofprop.component.html
@@ -1,4 +1,7 @@
 <h3>CHOOSE THE <span>TYPE OF PROP</span></h3>
+<div class="prev">
+   <a href="#">PREV</a>
+</div>
    
      <div class="main">
     
