--- a/property/src/app/land/land.component.html
+++ b/property/src/app/land/land.component.html
@@ -1,4 +1,7 @@
 <h3>BUY YOUR DREAM PROP - <span>SERVICE WITH A LIFESTYLE</span></h3>
+<div class="prev">
+  <a href="buytypeofprop">PREV</a>
+</div>
 
     <div class="grid">
   <ng-container *ngFor="let item of landList | filter:searchKey:'address'">
