--- a/property/src/app/postland/postland.component.html
+++ b/property/src/app/postland/postland.component.html
@@ -1,4 +1,7 @@
 <h3>POST YOUR <span>LAND</span></h3>
+<div class="prev">
+  <a href="posttype">PREV</a>
+</div>
 <div class="container-fluid">
   <div class="row">
     <div class="col-12">
