--- a/property/src/app/contact/contact.component.css
+++ b/property/src/app/contact/contact.component.css
@@ -1,7 +1,13 @@
      form{
        margin-top: 70px;
      }
-     
+     h3{
+      text-align: center;
+      font-size: 30px;
+    }
+    span{
+      color: goldenrod;
+    }
      .form-group{
         width: 60%;
         overflow: hidden;
@@ -76,3 +82,26 @@
         display: flex;
 
       }
+.text-danger{
+  color: red;
+}
+.prev a{
+  color: goldenrod;
+  margin-top: -70px;
+}
+a:link, a:visited {
+  background-color: white;
+  color: black;
+  border: 2px solid goldenrod;
+  padding: 10px 20px;
+  text-align: center;
+  font-size: 15px;
+  font-weight: 500;
+  text-decoration: none;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  background-color:goldenrod;
+  color: white;
+}
