--- a/property/src/app/contact/contact.component.html
+++ b/property/src/app/contact/contact.component.html
@@ -1,3 +1,7 @@
+<h3> ANY QUERIES?<span>ASKOUT</span></h3>
+<div class="prev">
+  <a href="aboutus">PREV</a>
+</div>
   <div class="container-fluid">
 
     <div class="row">
@@ -6,18 +10,20 @@
             <div class="form-group">
                 <label for="name" class='name'></label>
                 <input type="text" placeholder="Enter your name" required formControlName="name">
-                <span class="text-danger" *ngIf="contactForm.controls.name.errors && contactForm.controls.name.touched"><br>Field cant be empty</span>
+                <span class="text-danger" *ngIf="contactForm.controls.name.errors && contactForm.controls.name.touched"><br>*Field cant be empty</span>
               </div>
           <div class="form-group">
             <label for="email" class='mail'></label>
             <input type="email" placeholder="Email Address" required formControlName="email">
-            <span class="text-danger" *ngIf="contactForm.controls.email.errors && contactForm.controls.email.touched"><br>Invalid Email Address</span>
+            <div>
+            <span class="text-danger" *ngIf="contactForm.controls.email.errors && contactForm.controls.email.touched"><br>*Invalid Email Address</span>
+          </div>
           </div>
 
           <div class="form-group-f1">
             <label for="message" class='message'></label>
             <input type="textarea" placeholder="Ask Your Queries" required formControlName="message">
-            <span class="text-danger" *ngIf="contactForm.controls.message.errors && contactForm.controls.message.touched"><br>Field cant be empty</span>
+            <span class="text-danger" *ngIf="contactForm.controls.message.errors && contactForm.controls.message.touched"><br>*Field cant be empty</span>
           </div>
 
           
