--- a/property/src/app/lists/lists.component.html
+++ b/property/src/app/lists/lists.component.html
@@ -78,7 +78,7 @@ href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3
   <div class="wrapper">
     <div class="box">
       <em class="fas fa-quote-left quote"></em>
-      <p>Lorem aliasry ipsum dolor sits ametans, consectetur adipisicing elitits. Expedita reiciendis itaque placeat thuratu, quasi yiuos repellendus repudiandae deleniti ideas fuga molestiae, alias.</p>
+      <p>Wow ! I am really amazed. The processing of leads is very fast and can find properties easily.</p>
       <div class="content">
         <div class="info">
           <div class="name">USHA</div>
@@ -98,7 +98,7 @@ href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3
     </div>
     <div class="box">
       <em class="fas fa-quote-left quote"></em>
-      <p>Lorem aliasry ipsum dolor sits ametans, consectetur adipisicing elitits. Expedita reiciendis itaque placeat thuratu, quasi yiuos repellendus repudiandae deleniti ideas fuga molestiae, alias.</p>
+      <p>Excellent service and an equally involved team. I opted for an relaxed plan abd got a good deal on my property.Highly recommended.</p>
       <div class="content">
         <div class="info">
           <div class="name">MANI</div>
@@ -118,7 +118,7 @@ href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3
     </div>
     <div class="box">
       <em class="fas fa-quote-left  quote"></em>
-      <p>Lorem aliasry ipsum dolor sits ametans, consectetur adipisicing elitits. Expedita reiciendis itaque placeat thuratu, quasi yiuos repellendus repudiandae deleniti ideas fuga molestiae, alias.</p>
+      <p>The service was very great and professional.I got many suggestions according to my requirement.</p>
       <div class="content">
         <div class="info">
           <div class="name">ANANDH</div>
