--- a/property/src/app/postcommercial/postcommercial.component.css
+++ b/property/src/app/postcommercial/postcommercial.component.css
@@ -84,3 +84,23 @@ h3{
     .text-danger{
       color: red;
     }
+    .prev a{
+      color: goldenrod;
+      margin-top: -70px;
+    }
+    a:link, a:visited {
+      background-color: white;
+      color: black;
+      border: 2px solid goldenrod;
+      padding: 10px 20px;
+      text-align: center;
+      font-size: 15px;
+      font-weight: 500;
+      text-decoration: none;
+      display: inline-block;
+    }
+    
+    a:hover, a:active {
+      background-color:goldenrod;
+      color: white;
+    }
