--- a/property/src/app/services/services.component.html
+++ b/property/src/app/services/services.component.html
@@ -1,5 +1,7 @@
 <h3>BUY YOUR DREAM PROP - <span>SERVICE WITH A LIFESTYLE</span></h3>
-
+<div class="prev">
+  <a href="buytypeofprop">PREV</a>
+</div>
         <div class="grid">
       <ng-container *ngFor="let item of propertyList | filter:searchKey:'address'">
       <div class="grid-item">
