--- a/property/src/app/view/view.component.html
+++ b/property/src/app/view/view.component.html
@@ -1,38 +1,9 @@
-<!-- <p>view works!</p>
-{{sample.name}}
-{{sample.email}} -->
-<!-- 
-<h3>BUY YOUR DREAM PROP - SERVICE WITH A LIFESTYLE</h3>
-<div class="grid">
 
-<div class="grid-sample">
-<div class="card">
-  <img class="card-img" src="{{sample.upload}}" alt="Rome" />
-  <div class="card-content">
-    <h6 class="card-header">Name : {{sample.name}}</h6>
-    <p class="card-text">
-    {{sample.email}}
-    </p>
-    <p class="card-text">
-        {{sample.phone}}
-        </p>
-        <p class="card-text">
-            {{sample.description}}
-            </p>
-            <p class="card-text">
-                {{sample.landmark}}
-                </p>
-                <p class="card-text">
-                    {{sample.rent}}
-                    </p>
-  </div>
-</div>
-</div> -->
 <h3>SHAKE HANDS WITH THE <span>PROP-OWNERS</span></h3>
 <body>
   <div class="cover">
   <div class="box">
-    <img src="{{sample.upload}}">
+    <img src="{{sample.upload}}" alt="upload">
     <h2>{{sample.address}}</h2>
     <p>
       <em class="fa fa-user"></em>
